Fix comment widget dark mode colors and entry meta dark mode colors. Adjust site header line height

--- a/assets/sass/_blocks.scss
+++ b/assets/sass/_blocks.scss
@@ -73,10 +73,6 @@
     color: #fff;
 }
 
-.dark-mode a:visited {
-    color: #fff;
-}
-
 .dark-mode .wp-block-pullquote {
     border-top: 2px solid;
     border-bottom: 2px solid;
