--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -26,6 +26,7 @@
 
         .site-title {
             margin: 0;
+            line-height: 1.2;
         }
 
         .site-description {
