--- a/assets/sass/_sidebar.scss
+++ b/assets/sass/_sidebar.scss
@@ -48,6 +48,10 @@
         color: rgb(136, 136, 136);
       }
     }
+
+    ol a {
+      color: rgb(136, 136, 136);
+    }
   
     > ul {
       margin-left: 0;
